--- a/toast_provider/example/pubspec.yaml
+++ b/toast_provider/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_calculate
-description: A new Flutter application.
+name: toast_provider_example
+description: Demonstrates how to use the toast_provider plugin.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -15,19 +15,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  toast_provider:
-    path: toast_provider
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  intl: ^0.15.7
-  fluttertoast: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  toast_provider:
+    path: ../
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -41,8 +39,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
